Add shipment state field in API Redyser Offline task-033176

--- a/view/carrier_api_redyser_offline_tree.xml
+++ b/view/carrier_api_redyser_offline_tree.xml
@@ -5,6 +5,7 @@ copyright notices and license terms. -->
 <tree string="Carrier API Redyser Offline">
     <field name="api"/>
     <field name="shipment"/>
+    <field name="shipment_state"/>
     <field name="state"/>
     <field name="company"/>
 </tree>
